--- a/Cinema Room REST Service (Java)/task/src/resources/application.properties
+++ b/Cinema Room REST Service (Java)/task/src/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.url=jdbc:h2:file:./ticketsDB
 #spring.datasource.password=user
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
